--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,10 +8,15 @@
     <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
     <DebugType>portable</DebugType>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    
+
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
 
     <CopyToLibraries Condition="'$(CopyToLibraries)'==''">true</CopyToLibraries>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    <ResoniteInstallOnBuild>false</ResoniteInstallOnBuild>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(ResonitePath)'==''">
@@ -20,21 +25,21 @@
     <ResonitePath Condition="Exists('$(HOME)/.steam/steam/steamapps/common/Resonite/')">$(HOME)/.steam/steam/steamapps/common/Resonite</ResonitePath>
     <ResonitePath Condition="Exists('D:/Files/Games/Resonite/app/')">D:/Files/Games/Resonite/app</ResonitePath>
     <ResonitePath Condition="Exists('G:/SteamLibrary/steamapps/common/Resonite/')">G:/SteamLibrary/steamapps/common/Resonite</ResonitePath>
-  <ResonitePath Condition="Exists('D:/SteamLibrary/steamapps/common/Resonite')">D:/SteamLibrary/steamapps/common/Resonite</ResonitePath>
+    <ResonitePath Condition="Exists('D:/SteamLibrary/steamapps/common/Resonite')">D:/SteamLibrary/steamapps/common/Resonite</ResonitePath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(GamePath)'==''">
-  <GamePath>$(MSBuildThisFileDirectory)Game</GamePath>
-  <GamePath Condition="Exists('$(ResonitePath)')">$(ResonitePath)</GamePath>
+    <GamePath>$(MSBuildThisFileDirectory)Game</GamePath>
+    <GamePath Condition="Exists('$(ResonitePath)')">$(ResonitePath)</GamePath>
   </PropertyGroup>
-  
+
   <PropertyGroup Condition="'$(ResoniteCachePath)' == ''">
     <ResoniteCachePath Condition="Exists('S:/Resonite/')">S:/Resonite/</ResoniteCachePath>
     <ResoniteCachePath Condition="Exists('D:/TempFiles/Resonite/')">D:/TempFiles/Resonite/</ResoniteCachePath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(ResoniteDataPath)'==''">
-  <ResoniteDataPath Condition="Exists('D:/TempFiles/Resonite/Data')">D:/TempFiles/Resonite/Data</ResoniteDataPath>
+    <ResoniteDataPath Condition="Exists('D:/TempFiles/Resonite/Data')">D:/TempFiles/Resonite/Data</ResoniteDataPath>
   </PropertyGroup>
 
 </Project>
