--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -50,13 +50,13 @@ jobs:
           
     # Build and test projects
     - name: Install dependencies
-      run: dotnet restore -c Release
+      run: dotnet restore
     
     - name: Build
-      run: dotnet build --no-restore -c Release
+      run: dotnet build -c Release --no-restore
     
     - name: Test
-      run: dotnet test --no-restore --no-build -c Release
+      run: dotnet test -c Release --no-restore --no-build
 
     - name: Move NuGet Packages
       run: mv (Get-ChildItem -Recurse ./ -Include *.nupkg) ./
